[package]
name = "dioxus-frontend"
version = "0.1.0"
authors = ["zhaowei <zhaowei@microsoft.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-free-icons = { version = "0.8.0", features = [
  "font-awesome-brands",
  "bootstrap",
] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
